--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <!-- Updated the button to use Django URL template tag -->
     <div class="button-container0">
         <a href="crop-recommendation.html" class="buttonn">Crop Recommendations</a>
-        <a href="weather-forecast/index.html" class="buttonn">Today's Weather Forecast</a>
-        <a href="smart-farming-guide/index.html" class="buttonn">Smart Farming Guide</a>
+        <a href="weather-forecast.html" class="buttonn">Today's Weather Forecast</a>
+        <a href="smart-farming-guide.html" class="buttonn">Smart Farming Guide</a>
 
     </div>
 
@@ -77,7 +77,7 @@
                 Crop-Prediction Model For Optimal Decisions. Explore Historical 
                 Data, Get Alerts, And Access Educational Resources.
             </p>
-          <!-- <a href="weather-forecast/index.html" class="all-btn">More Info</a> -->
+          <!-- <a href="weather-forecast.html" class="all-btn">More Info</a> -->
         </div>
 
         <!-- Feature 2: Smart Crop Planning -->
@@ -112,7 +112,7 @@
                 harvest timing, weather updates, and fertilizer recommendations to 
                 ensure healthy crops.
             </p>
-           <!-- <a href="smart-farming-guide/index.html" class="all-btn">More Info</a> -->
+           <!-- <a href="smart-farming-guide.html" class="all-btn">More Info</a> -->
         </div>
 
     </div>
